# kalakit_test_projects

./: .gitattributes  .gitignore  LICENSE  README.md
Game-test/: CMakeLists.txt  README.md
Game-test/docs/: solin_specification.md
Game-test/files/audio/: sfx_AirVents_High.flac  sfx_AirVents_Low.flac  sfx_meele_metal1.flac  sfx_meele_metal2.flac  sfx_meele_metal3.flac  sfx_meele_wood1.flac  sfx_meele_wood2.flac  sfx_meele_wood3.flac  sfx_metalpipe1.flac  sfx_metalpipe2.flac
Game-test/files/models/: crusher.kmd  test.kmd
Game-test/files/shaders/: debug_line.frag  debug_line.vert  debug_shape.frag  debug_shape.vert  model.frag  model.vert
Game-test/include/core/: core.hpp  input.hpp  registry.hpp
Game-test/include/gameobject/: camera.hpp  opengl_model.hpp  opengl_point_light.hpp
Game-test/include/graphics/: opengl_texture.hpp  render.hpp
Game-test/src/: main.cpp
Game-test/src/core/: core.cpp  input.cpp
Game-test/src/gameobject/: camera.cpp  opengl_model.cpp  opengl_point_light.cpp
Game-test/src/graphics/: opengl_texture.cpp  render.cpp
KalaLua/: CMakeLists.txt  README.md
KalaLua/_external_shared/KalaLua/: readme.md
KalaLua/_external_shared/KalaLua/debug/: KalaLua1d.lib
KalaLua/_external_shared/KalaLua/include/core/: kl_lua.hpp
KalaLua/_external_shared/KalaLua/release/: KalaLua1.lib
KalaLua/debug/: .ninja_deps  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE.md  build.ninja  cmake_install.cmake  test-project.lib
KalaLua/debug/.cmake/api/v1/reply/: cache-v2-98b91e83ed4267b00bc2.json  cmakeFiles-v1-f6f15030b10a2f03eba7.json  codemodel-v2-99cc4b8abddeaffe7be6.json  index-2026-01-02T18-37-19-0190.json  target-test-project-Debug-4263d047b289889ff8a3.json
KalaLua/files/scripts/: test.lua
KalaLua/release/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  build.ninja  cmake_install.cmake
KalaLua/release/files/scripts/: test.lua
KalaLua/src/: main.cpp
UI-test/: CMakeLists.txt  README.md
UI-test/docs/: command_panel.md  ecosystem.md
UI-test/files/fonts/: arial-italic.kfd  roboto-regular.kfd  smash.kfd  times-bold.kfd
UI-test/include/core/: core.hpp
UI-test/include/graphics/: render.hpp
UI-test/src/: main.cpp
UI-test/src/core/: core.cpp
UI-test/src/graphics/: render.cpp
